--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
     <img src="https://i.kym-cdn.com/photos/images/newsfeed/002/164/493/b8b.jpg" alt="drake" width="500" height="500">
   </div>
   <div>
-    Drake, as usual, woke up today feeling extra <inline-audio>fruity.</inline-audio>
+    Drake, as usual, woke up today feeling extra <inline-audio accent-color="blue">fruity.</inline-audio>
   </div>
   <div>
-    So he used his magical zest to make this <inline-audio audio-file='../assets/drake-song.mp3'>song</inline-audio> with The Weeknd...
+    So he used his magical zest to make this <inline-audio accent-color="blue" audio-file='../assets/drake-song.mp3'>song</inline-audio> with The Weeknd...
   </div>
 
   <script type="module">
